# geb-chip-8

./: CMakeLists.txt  devlog.md  readme.md
devlog/: devlog.md
programs/: animation.chip8  draw_letters.chip8  everything.chip8  keyboard_audio_test.chip8  random_decimal_digits.chip8
src/: device.h  display.h  emulator.h  geblib.h  keyboard.h  main.cpp  speaker.h  timer.h  types.h
